# Makefile.am for ams

demosdatadir = $(pkgdatadir)/demos
dist_demosdata_DATA = \
	analog_memory_1.ams \
	bass_advenv.ams \
	bass.ams \
	bass_reverb.ams \
	bitgrinder_1.ams \
	chorus_drops2.ams \
	chorus_drops.ams \
	classical.ams \
	classical_reverb.ams \
	example_2vco.ams \
	example_3vco.ams \
	example_3vco_bode.ams \
	example_advmcv.ams \
	example_ams_demo.ams \
	example_ams_demo_bode.ams \
	example_ams_demo_scala.ams \
	example_ams_demo_scope_spectrum.ams \
	example_ams_demo_scope_spectrum_drums.ams \
	example_ams_demo_scope_spectrum_mcp_phaser.ams \
	example_ams_demo_scope_spectrum_mcpvcf.ams \
	example_barberpole.ams \
	example_barberpole_phaser.ams \
	example_barberpole_phaser_reverb.ams \
	example_barberpole_phaser_up_down.ams \
	example_barberpole_up_down.ams \
	example_basic.ams \
	example_basic_vcf.ams \
	example_basic_vcf_gverb_mcpfilter_env.ams \
	example_basic_vcf_gverb_mcpfilter_env_filtmod.ams \
	example_basic_vcf_reverb.ams \
	example_basic_vcf_reverb_filter_env.ams \
	example_basic_vcf_reverb_mcpfilter_env.ams \
	example_bode.ams \
	example_bode_wail.ams \
	example_burst_noise.ams \
	example_capture.ams \
	example_chorus.ams \
	example_chorus_modwheel.ams \
	example_cvs.ams \
	example_dual_env.ams \
	example_dynamicwaves_8.ams \
	example_dynamicwaves_8_chorus.ams \
	example_dynamicwaves_8_retrigger.ams \
	example_dynamicwaves_8_seq.ams \
	example_env_vcf.ams \
	example_fm.ams \
	example_full.ams \
	example_full_midi.ams \
	example_function.ams \
	example_midiout_birds.ams \
	example_midiout_controller.ams \
	example_midiout_junglebirds.ams \
	example_midiout_note.ams \
	example_midiout_note_velocity.ams \
	example_midiout_random.ams \
	example_mvclpf_phaser_2poles.ams \
	example_mvclpf_phaser.ams \
	example_phaser.ams \
	example_phaser_bassclang.ams \
	example_phaser_basspad.ams \
	example_portamento.ams \
	example_random_major.ams \
	example_random_major_chords.ams \
	example_random_minor_chords.ams \
	example_rectangle_pw.ams \
	example_ringmod.ams \
	example_simple_cembalo.ams \
	example_strings.ams \
	example_strings_high_reso.ams \
	example_vcdoubledecay.ams \
	example_vcEnvelope.ams \
	example_vcEnvelope_exp.ams \
	example_vcEnvelope_lin.ams \
	example_vco_add.ams \
	example_vcorgan_4.ams \
	example_vcorgan_6.ams \
	example_vcorgan_8.ams \
	example_vc_panning.ams \
	example_vc_panning_lfo.ams \
	example_vcswitch.ams \
	example_wind.ams \
	hysteresis_1.ams \
	JungleBird.ams \
	living_phaser.ams \
	organ01.ams \
	organ02.ams \
	organ03.ams \
	phaser_wail.ams \
	sequence01.ams \
	sequence01b.ams \
	sequence02.ams \
	sequence02b.ams \
	sequence02c.ams \
	sequence03.ams \
	sequence03b.ams \
	SineSolo.ams \
	v8_seq_demo_1.ams \
	v8_seq_demo_2.ams \
	v8_seq_demo_3.ams \
	vcdelay_1.ams \
	vocoder_1.ams
