# Makefile.am for ams

instrumentsdatadir = $(pkgdatadir)/instruments
dist_instrumentsdata_DATA = \
	bass_presets.ams \
	bass_presets_vcenv.ams \
	example_presets_3vco.ams \
	example_presets.ams \
	hplp_instrument.ams \
	hplp_instrument_pocketdial.ams \
	miniams.ams \
	miniams_pan.ams \
	miniams_pan_drift.ams \
	miniams_pan_lfo.ams \
	miniams_vcenv2.ams \
	organ.ams \
	phaser_instrument.ams \
	phaser_instrument_pan.ams \
	phaser_instrument_pan_lfo.ams \
	README_hplp_instrument_pocketdial

