# Makefile.am for ams

bin_PROGRAMS = ams

# list of all generated (and not distributed) sources
nodist_ams_SOURCES = \
	aboutdialog_moc.cpp \
	box_moc.cpp \
	canvas_moc.cpp \
	configdialog_moc.cpp \
	function_moc.cpp \
	guiwidget_moc.cpp \
	ladspadialog_moc.cpp \
	m_ad_moc.cpp \
	m_advenv_moc.cpp \
	m_advmcv_moc.cpp \
	m_amp_moc.cpp \
	m_analogmemory_moc.cpp \
	m_bitgrind_moc.cpp \
	m_conv_moc.cpp \
	m_cvs_moc.cpp \
	m_delay_moc.cpp \
	m_dynamicwaves_moc.cpp \
	m_env_moc.cpp \
	m_function_moc.cpp \
	m_hysteresis_moc.cpp \
	m_inv_moc.cpp \
	m_ladspa_moc.cpp \
	m_lfo_moc.cpp \
	m_mcv_moc.cpp \
	m_midiout_moc.cpp \
	m_mix_moc.cpp \
	m_mphlfo_moc.cpp \
	m_noise_moc.cpp \
	m_noise2_moc.cpp \
	m_pcmin_moc.cpp \
	m_pcmout_moc.cpp \
	m_quantizer_moc.cpp \
	m_ringmod_moc.cpp \
	m_scmcv_moc.cpp \
	m_scope_moc.cpp \
	m_scquantizer_moc.cpp \
	m_seq_moc.cpp \
	m_sh_moc.cpp \
	m_slew_moc.cpp \
	m_spectrum_moc.cpp \
	m_stereomix_moc.cpp \
        m_v8sequencer_moc.cpp \
	m_vca_moc.cpp \
	m_vcdelay_moc.cpp \
	m_vcdoubledecay_moc.cpp \
	m_vcenv_moc.cpp \
	m_vcenv2_moc.cpp \
	m_vcf_moc.cpp \
	m_vco_moc.cpp \
	m_vco2_moc.cpp \
	m_vcorgan_moc.cpp \
	m_vcpanning_moc.cpp \
	m_vcswitch_moc.cpp \
	m_vocoder_moc.cpp \
	m_vquant_moc.cpp \
	m_wavout_moc.cpp \
	mainwindow_moc.cpp \
	midicheckbox_moc.cpp \
	midicombobox_moc.cpp \
	midicontrollable_moc.cpp \
	midiguicomponent_moc.cpp \
	midipushbutton_moc.cpp \
	midisliderbase_moc.cpp \
	midiwidget_moc.cpp \
	modularsynth_moc.cpp \
	module_moc.cpp \
	multi_envelope_moc.cpp \
	port_moc.cpp \
	port_popup_moc.cpp \
	prefwidget_moc.cpp \
	scopescreen_moc.cpp \
	synthdata_moc.cpp \
	textedit_moc.cpp


# list of all c++ source files
ams_SOURCES = \
	aboutdialog.cpp \
	box.cpp \
	canvas.cpp \
	canvasfunction.cpp \
	configdialog.cpp \
	envelope.cpp \
	function.cpp \
	guiwidget.cpp \
	intmidislider.cpp \
	ladspadialog.cpp \
	m_ad.cpp \
	m_advenv.cpp \
	m_advmcv.cpp \
	m_amp.cpp \
	m_analogmemory.cpp \
	m_bitgrind.cpp \
	m_conv.cpp \
	m_cvs.cpp \
	m_delay.cpp \
	m_dynamicwaves.cpp \
	m_env.cpp \
	m_function.cpp \
	m_hysteresis.cpp \
	m_inv.cpp \
	m_ladspa.cpp \
	m_lfo.cpp \
	m_mcv.cpp \
	m_midiout.cpp \
	m_mix.cpp \
	m_mphlfo.cpp \
	m_noise.cpp \
	m_noise2.cpp \
	m_pcmin.cpp \
	m_pcmout.cpp \
	m_quantizer.cpp \
	m_ringmod.cpp \
	m_scmcv.cpp \
	m_scope.cpp \
	m_scquantizer.cpp \
	m_seq.cpp \
	m_sh.cpp \
	m_slew.cpp \
	m_spectrum.cpp \
	m_stereomix.cpp \
        m_v8sequencer.cpp \
	m_vca.cpp \
	m_vcdelay.cpp \
	m_vcdoubledecay.cpp \
	m_vcenv.cpp \
	m_vcenv2.cpp \
	m_vcf.cpp \
	m_vco.cpp \
	m_vco2.cpp \
	m_vcorgan.cpp \
	m_vcpanning.cpp \
	m_vcswitch.cpp \
	m_vocoder.cpp \
	m_vquant.cpp \
	m_wavout.cpp \
	main.cpp \
	mainwindow.cpp \
	mced.cpp \
	midicheckbox.cpp \
	midicombobox.cpp \
	midicontrollable.cpp \
	midicontroller.cpp \
	midiguicomponent.cpp \
	midipushbutton.cpp \
	midislider.cpp \
	midisliderbase.cpp \
	midiwidget.cpp \
	modularsynth.cpp \
	module.cpp \
	multi_envelope.cpp \
	port.cpp \
	port_popup.cpp \
	prefwidget.cpp \
	scopescreen.cpp \
	synthdata.cpp \
	textedit.cpp \
	notelist.cpp

# list of all header files
noinst_HEADERS = \
	aboutdialog.h \
	box.h \
	canvas.h \
	canvasfunction.h \
	configdialog.h \
	envelope.h \
	function.h \
	guiwidget.h \
	intmidislider.h \
	ladspadialog.h \
	m_ad.h \
	m_advenv.h \
	m_advmcv.h \
	m_amp.h \
	m_analogmemory.h \
	m_bitgrind.h \
	m_conv.h \
	m_cvs.h \
	m_delay.h \
	m_dynamicwaves.h \
	m_env.h \
	m_function.h \
	m_hysteresis.h \
	m_inv.h \
	m_ladspa.h \
	m_lfo.h \
	m_mcv.h \
	m_midiout.h \
	m_mix.h \
	m_mphlfo.h \
	m_noise.h \
	m_noise2.h \
	m_pcmin.h \
	m_pcmout.h \
	m_quantizer.h \
	m_ringmod.h \
	m_scmcv.h \
	m_scope.h \
	m_scquantizer.h \
	m_seq.h \
	m_sh.h \
	m_slew.h \
	m_spectrum.h \
	m_stereomix.h \
        m_v8sequencer.h \
	m_vca.h \
	m_vcdelay.h \
	m_vcdoubledecay.h \
	m_vcenv.h \
	m_vcenv2.h \
	m_vcf.h \
	m_vco.h \
	m_vco2.h \
	m_vcorgan.h \
	m_vcpanning.h \
	m_vcswitch.h \
	m_vocoder.h \
	m_vquant.h \
	m_wavout.h \
	macros.h \
	main.h \
	mainwindow.h \
	mced.h \
	midicheckbox.h \
	midicombobox.h \
	midicontrollable.h \
	midicontroller.h \
	midiguicomponent.h \
	midipushbutton.h \
	midisliderbase.h \
	midislider.h \
	midiwidget.h \
	modularsynth.h \
	module.h \
	msoptions.h \
	multi_envelope.h \
	nsm.h \
	port.h \
	port_popup.h \
	prefwidget.h \
	ringbuffer.h \
	scopescreen.h \
	spectrumscreen.h \
	synthdata.h \
	textedit.h \
	notelist.h

translationsdir = $(pkgdatadir)/translations
translations = \
	translations/ams_de.ts \
	translations/ams_fr.ts

translations_DATA = \
	translations/ams_de.qm \
	translations/ams_fr.qm

# misc files which are distributed but not installed
EXTRA_DIST = $(translations)

# all generated files to be removed by "make clean"
CLEANFILES = $(nodist_ams_SOURCES) $(translations_DATA)

ams_CXXFLAGS = $(QT_CXXFLAGS) $(AMS_CXXFLAGS)
DEFS = -D_REENTRANT -DLADSPA_PATH=\"$(LADSPA_PATH)\" -DTRANSLATIONSDIR=\"$(translationsdir)\" -DDEMOFILEPATH=\"$(pkgdatadir)/demos\" -DINSTRUMENTFILEPATH=\"$(pkgdatadir)/instruments\" @DEFS@

# rule for moc-file generation
SUFFIXES = _moc.cpp

.h_moc.cpp: $(ams_SOURCES)
	$(MOC) $< -o $@

# rule for translation file updates
$(translations): $(ams_SOURCES)
	        $(LUPDATE) -verbose $(ams_SOURCES) -ts $@

# rule to generate binary translation files
.ts.qm: $(translations)
	$(LRELEASE) -verbose $< -qm $@
