# Makefile.am for ams

tutorialdatadir = $(pkgdatadir)/tutorial
dist_tutorialdata_DATA = \
	A_tutorial01_Introduction.ams \
	A_tutorial01_MCV_and_VCO_1.ams \
	A_tutorial01_MCV_and_VCO_2.ams \
	A_tutorial01_MCV_and_VCO_3.ams \
	A_tutorial02_VCA.ams \
	A_tutorial03_ENV_and_VCA.ams \
	A_tutorial04_VCF_and_Scope.ams \
	A_tutorial05_ENV_and_VCF_1.ams \
	A_tutorial05_ENV_and_VCF_2.ams \
	A_tutorial05_ENV_and_VCF_3.ams \
	A_tutorial05_ENV_and_VCF_4.ams \
	A_tutorial05_ENV_and_VCF_5.ams \
	A_tutorial05_ENV_and_VCF_6.ams \
	A_tutorial06_LFO_Pitch.ams \
	A_tutorial07_LFO_PW.ams \
	A_tutorial08_ParameterView.ams \
	A_tutorial09_Effects_Chorus.ams \
	A_tutorial10_Effects_Reverb.ams \
	A_tutorial11_Effects_Canyon.ams \
	A_tutorial12_Effects_PhaserLFO.ams \
	A_tutorial13_Effects_PhaserENV.ams \
	A_tutorial14_Effects.ams
